	* charstrg.d (eqcomp_fun_t): renamed from `eqcomp_fun'
	* array.d (ADJUSTABLE-ARRAY-P): use VALUES_IF
	(uint_bitpack_t): renamed from `uint_bitpack'
	(uint_2bitpack_t): renamed from `uint_2bitpack'
	(initial_contents_locals_t): renamed from `initial_contents_locals'
	(reshape_data): renamed from `reshape_data'
	(test_array): turned into a function
	(ADJUST-ARRAY): use it

2002-09-22  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Bring (directory) to compliance with new win32 shortcut handling.
	* pathname.d [WIN32_NATIVE]:
	(resolve_shell_shortcut): changed parameters and symantics to
	lower level (symlink is based on shortcuts which is
	an implementation method).
	(resolve_shell_symlink): use it, work as old
	resolve_shell_shortcut did.
	(assure_dir_exists): renamed a call to it.
	(directory_search_scandir): now handles shortcuts specially.

2002-09-21  John Hinsdale <hin@alma.com>

	* module/oracle/Makefile.in: better Oracle -I path for v8.0.5

2002-09-20  Sam Steingold  <sds@gnu.org>

	* control.d (UNWIND-TO-DRIVER): accept a TOP-P argument
	(UNWIND-TO-TOP): removed
	* subr.d, constsym.d (UNWIND-TO-TOP): removed
	* subr.d, compiler.lisp (UNWIND-TO-DRIVER): changed the signature
	* eval.d (FUNTAB): added MEMQ
	* constobj.d (version): bumped because of UNWIND-TO-DRIVER and MEMQ
	* reploop.lisp (break-loop, step-hook-fn): do not use
	UNWIND-TO-TOP but pass an argument to UNWIND-TO-DRIVER

2002-09-20  Sam Steingold  <sds@gnu.org>

	fix the OBSOLETE-ACTION patch
	* init.lisp (warn): the preliminary definition must return NIL
	(open-for-load): use SYS::BUILT-IN-STREAM-CLOSE instead of CLOSE

2002-09-20  Sam Steingold  <sds@gnu.org>

	error reporting clean-up
	* charstrg.d (coerce_ss, coerce_imm_ss, coerce_normal_ss)
	(coerce_imm_normal_ss): use fehler_string() instead of explicit
	fehler(type_error,...)
	(test_char_arg): renamed from test_newchar_arg(), use fehler_char()
	(STANDARD-CHAR-P, GRAPHIC-CHAR-P, CHAR-WIDTH, STRING-CHAR-P)