@@ -10,6 +10,9 @@
 	(reshape_data): renamed from `reshape_data'
 	(test_array): turned into a function
 	(ADJUST-ARRAY): use it
+	* symbol.d (test_symbol): new function
+	(%PUTD, %FIND-SUBR, GET, %PUTPLIST, %PUT, REMPROP, SYMBOL-PACKAGE)
+	(SYMBOL-PLIST, SYMBOL-NAME, SPECIAL-VARIABLE-P): use it
 
 2002-09-22  Arseny Slobodjuck <ampy@ich.dvo.ru>
 
